TIPS: update 1027_til.md(add how to fix vcgencmd display_power)

--- a/hw/SMARTTHINGS/TIL/1027_til.md
+++ b/hw/SMARTTHINGS/TIL/1027_til.md
@@ -17,3 +17,9 @@
     ```
     * 드라이버 설정이 잘못되어있는것 같은데 정보들이 별로 없어서 공부중이다.
 * 화면을 제어하는 명령어를 찾으면 example.c에 코드를 추가하고 다시 make해서 테스트 진행할 예정
+
+
+### 해결
+* tvservice를 사용하려고 하면 vc4-kms-v3d 드라이버를 사용해서 불가능하다고 오류가발생한다.
+* /boot/config.txt파일에서 vc4-kms-v3d 드라이버를 vc4-fkms-v3d로 변경해주었다.
+* reboot를 하고 vcgencmd display_power을 사용해보니 hdmi 출력이 제대로 동작됨을 확인하였다.
