--- a/exec/포팅 매뉴얼.md
+++ b/exec/포팅 매뉴얼.md
@@ -25,8 +25,14 @@
 - Mosquitto >= 2.0.15
   - with TLS encryption, port 8883
 - RPi4
-  - Python == 3.7
-  - OpenCV ...
+  - Python == 3.7.3
+  - OpenCV == 4.6.0
+  - cvlib == 0.2.7
+  - dlib == 19.24.0
+  - tensorflow == 2.4.0
+  - google-cloud-speech == 2.16.2
+  - pvporcupine == 2.1.4
+  - pvrecorder == 1.1.1
   - NodeJS ...
   - 더 써줘
 
@@ -54,11 +60,10 @@
 
 #### SSL 설정
 
- - docker-compose.yml 수정
-   - `nginx:` 블록의 `volumes:` {cert_path}:/etc/letsencrypt 형태로 수정
- - nginx/nginx.conf.template 수정
-   - `ssl_certificate` 및 `ssl_certificate_key`를 알맞게 설정 (기본값: `/etc/letsencrypt/live/${SERVICE_HOST}/...`)
-
+- docker-compose.yml 수정
+  - `nginx:` 블록의 `volumes:` {cert_path}:/etc/letsencrypt 형태로 수정
+- nginx/nginx.conf.template 수정
+  - `ssl_certificate` 및 `ssl_certificate_key`를 알맞게 설정 (기본값: `/etc/letsencrypt/live/${SERVICE_HOST}/...`)
 
 #### 빌드 및 서버 실행
 
@@ -69,4 +74,110 @@ $ docker compose up -d --build
 
 ### 3-2. 하드웨어 설정
 
-써줘
+### 음성인식 설정
+
+USB 마이크 1개를 이용하여 wakeup word와 google stt를 이용하여 명령어를 입력
+
+1. Picovoice 설정
+   "하이 빅스비"와 같은 wakeup word 설정
+
+- [Picovoice 사이트](https://console.picovoice.ai/)에서 로그인 후 `Access Token` 발급
+- 라이브러리 설치
+
+```
+pip3 install pvporcupinedemo
+pip3 install pvrecorder
+```
+
+- 테스트
+
+`hw/Voice-recogntion/Test_Code/porcupine_demo_mic`를 통해
+만들어둔 본인의 access_key를 넣고 실행
+
+```
+porcupine_demo_mic --access_key ${ACCESS_KEY} --keywords picovoice
+```
+
+- picovoice라고 마이크에 말 했을 때, Hotword detected라는 메세지 출력하면 정상
+
+2. Google STT 설정
+
+- `프로젝트 생성 > 서비스 계정 & Access 키(.json 파일) 발급` [참고 사이트](https://cloud.google.com/speech-to-text/docs/before-you-begin#windows)
+- 생성한 Acess 키(.json 파일)를 환경변수로 설정
+
+```
+GOOGLE_APPLICATION_CREDENTIALS="KEY_PATH"
+```
+
+- 라이브러리 설치
+
+```
+pip3 install --upgrade google-cloud-speech
+pip3 uninstall grpcio
+pip3 uninstall grpcio-status
+pip3 install grpcio==1.44.0 --no-binary=grpcio
+pip3 install grpcio-tools==1.44.0 --no-binary=grpcio-tools
+```
+
+- 테스트
+
+`hw/Voice-recogntion/Test_Code/google_stt_test.py`를 실행
+
+```
+python3 google_stt_test.py
+```
+
+`Transcript: how old is the Brooklyn Bridge` 출력 시 정상
+
+### 자세인식 설정
+
+OpenCV와 Tensorflow를 이용하여 USB 카메라에 찍힌 사진을 통해 자세 인식
+
+1. OpenCV 설정
+
+- 라이브러리 설치
+
+```
+pip3 install opencv-contrib-python==4.1.0.25
+```
+
+- 테스트
+
+```
+python3 -c "import cv2; print(cv2.__version__)"
+```
+
+에러 없을 시 정상
+
+2. dlib 설정
+
+- 라이브러리 설치
+
+```
+pip3 install dlib
+```
+
+- 테스트
+
+```
+python3 -c "import dlib; print(dlib.__version__)"
+```
+
+에러 없을 시 정상
+
+3. cvlib 설정
+
+- 라이브러리 설치
+
+```
+pip3 install cvlib
+pip3 install <https://github.com/lhelontra/tensorflow-on-arm/releases/download/v2.1.0/tensorflow-2.1.0-cp37-none-linux_armv7l.whl>
+```
+
+- 테스트
+
+```
+python3 -c "import cvlib; print(cvlib.__version__)"
+```
+
+에러 없을 시 정상
