Docs: update readme.md

--- a/exec/포팅 매뉴얼.md
+++ b/exec/포팅 매뉴얼.md
@@ -33,8 +33,7 @@
   - google-cloud-speech == 2.16.2
   - pvporcupine == 2.1.4
   - pvrecorder == 1.1.1
-  - NodeJS ...
-  - 더 써줘
+  - NodeJS
 
 ## 3. 설정 및 빌드
 
@@ -181,3 +180,92 @@ python3 -c "import cvlib; print(cvlib.__version__)"
 ```
 
 에러 없을 시 정상
+
+
+### 스마트싱스 설정
+* Install packages
+
+* Build device library for smartThings
+    ```
+    cd ~/rpi-st-device
+    ./sdkbuildsetup
+    cd ~/st-device-sdk-c
+    make
+    ```
+
+* Register Device in Developer Workspace
+    1. Make device workspace
+    2. Make device Profile and Onboarding
+    3. Write Product info
+    4. Create raspberry pi device key 
+    5. Enroll your device key into your SmartThings in workspace
+    6. download Onboarding.json and copy into raspberryPi directory
+    7. make qrcode for device
+
+* Build your device
+    ```
+    cd ~/st-device-sdk-c/example
+    rm example
+    make
+    ```
+
+* Setting Raspberry Pi for AP mode
+    * Check your Pi have AP mode
+        ```
+        iw phy0 info
+        ```
+    * Check if you have with Wifi(2.4GHz) in your Area
+        * If there no Wifi(2.4GHz) you can't connect your device in your phone
+
+    * Install packages for SoftAP services
+        ```
+        sudo apt-get install hostapd
+        sudo apt-get install dnsmasq
+        ```
+    
+    * Disable SoftAP service to prevent start without your purpose
+        ```
+        sudo systemctl unmask hostapd
+        sudo update-rc.d hostapd disable
+        sudo update-rc.d dnsmasq disable
+        ```
+
+    * Copy and change dhcpcd_ap code
+        ```
+        sudo cp /etc/dhcpcd.conf /etc/dhcpcd_ap.conf
+        sudo nano dhcpcd_ap.conf
+        ```
+
+        **setting**
+        interface **wlan0**
+            static ip_address = **192.168.2.1/24**
+            **nohook wpa_supplicant**
+
+    * Change hostapd.conf
+        ```
+        sudo nano /etc/hostapd/hostapd.conf
+        ```
+        **setting**
+        contry_code=**KR**
+        interface=**wlan0**
+        channel=**(check your channel with 'iw wlan0 info')**
+
+    * Change code dnsmasq.conf
+        ```
+        sudo nano /etc/dnsmasq.conf
+        ```
+        **setting**
+        interface=**wlan0**
+        dhcp-range=**192.168.2.2,192.168.2.10,255.255.255.0.12h**
+        domain=wlan
+        address=/gw.wlan/**192.168.2.1**
+
+    * Enable AP mode
+        ```
+        cd ~/rpi-st-device
+        sudo ./testhostapd
+        ```
+
+* Connect your device in your phone application
+    1. Use qrcode
+    2. Find devices that can be registered nearby
