DOCS: Modify 포팅 매뉴얼

--- a/exec/포팅 매뉴얼.md
+++ b/exec/포팅 매뉴얼.md
@@ -3,12 +3,17 @@
 - [포팅 매뉴얼](#포팅-매뉴얼)
   - [1. 테스트 환경](#1-테스트-환경)
   - [2. Requirements](#2-requirements)
-  - [3. 설정 및 빌드](#3-설정-및-빌드)
-    - [3-1. 백엔드 서버 설정](#3-1-백엔드-서버-설정)
+  - [3. 빌드 및 실행](#3-빌드-및-실행)
+    - [3-1. 백엔드 서버](#3-1-백엔드-서버)
       - [루트 .env 파일](#루트-env-파일)
       - [SSL 설정](#ssl-설정)
       - [빌드 및 서버 실행](#빌드-및-서버-실행)
-    - [3-2. 하드웨어 설정](#3-2-하드웨어-설정)
+    - [3-2. 하드웨어](#3-2-하드웨어)
+      - [.env 파일](#env-파일)
+      - [음성인식 설정](#음성인식-설정)
+      - [자세인식 설정](#자세인식-설정)
+      - [스마트싱스 설정](#스마트싱스-설정)
+      - [디스플레이 프론트엔드 설정](#디스플레이-프론트엔드-설정)
 
 ## 1. 테스트 환경
 
@@ -35,9 +40,9 @@
   - pvrecorder == 1.1.1
   - NodeJS
 
-## 3. 설정 및 빌드
+## 3. 빌드 및 실행
 
-### 3-1. 백엔드 서버 설정
+### 3-1. 백엔드 서버
 
 #### 루트 .env 파일
 
@@ -71,201 +76,242 @@ $ cd {PROJECT_ROOT}
 $ docker compose up -d --build
 ```
 
-### 3-2. 하드웨어 설정
+### 3-2. 하드웨어
 
-### 음성인식 설정
+#### .env 파일
+
+- `hw/.env.template`을 `hw/.env`로 복사 후 내용을 작성
+  - WEBSOCKET_PORT : 사용할 웹소켓 port 번호
+  - MQTT_HOST : MQTT 서버의 웹 주소
+  - MQTT_PORT : MQTT port 번호
+  - MQTT_BASE_TOPIC : MQTT의 BASE 주제
+  - DEVICE_ID : 라즈베리파이의 시리얼 번호 (`cat /proc/cpuinfo | grep Serial | awk '{print $3}'`)
+  - PICOVOICE_KEY : [Picovoice 사이트](https://console.picovoice.ai/)에서 로그인 후 얻은 ACCESS KEY
+  - KEYWORDS_PATH : 사용할 wakeup word ppn 파일 경로
+  - MODEL_PATH : 사용할 wakeup word의 언어 pv 파일 경로
+  - AUDIO_INDEX : USB 마이크가 장착된 audio index
+    - `./Voice-recognition/show_audio.py` 실행시키기
+    - 사용중인 마이크 명에 일치하는 audio index 확인
+  - RECORD_PATH : 녹음 후 저장되는 경로, 어느 경로든 상관없음
+
+#### 음성인식 설정
 
 USB 마이크 1개를 이용하여 wakeup word와 google stt를 이용하여 명령어를 입력
 
 1. Picovoice 설정
    "하이 빅스비"와 같은 wakeup word 설정
 
-- [Picovoice 사이트](https://console.picovoice.ai/)에서 로그인 후 `Access Token` 발급
-- 라이브러리 설치
+   - [Picovoice 사이트](https://console.picovoice.ai/)에서 로그인 후 `Access Token` 발급
+   - 라이브러리 설치
 
-```
-pip3 install pvporcupinedemo
-pip3 install pvrecorder
-```
+     ```sh
+     pip3 install pvporcupinedemo
+     pip3 install pvrecorder
+     ```
 
-- 테스트
+   - 테스트
 
-`hw/Voice-recogntion/Test_Code/porcupine_demo_mic`를 통해
-만들어둔 본인의 access_key를 넣고 실행
+     `hw/Voice-recogntion/Test_Code/porcupine_demo_mic`를 통해
+     만들어둔 본인의 access_key를 넣고 실행
 
-```
-porcupine_demo_mic --access_key ${ACCESS_KEY} --keywords picovoice
-```
+     ```sh
+     porcupine_demo_mic --access_key ${ACCESS_KEY} --keywords picovoice
+     ```
 
-- picovoice라고 마이크에 말 했을 때, Hotword detected라는 메세지 출력하면 정상
+     picovoice라고 마이크에 말 했을 때, Hotword detected라는 메세지 출력하면 정상
 
 2. Google STT 설정
 
-- `프로젝트 생성 > 서비스 계정 & Access 키(.json 파일) 발급` [참고 사이트](https://cloud.google.com/speech-to-text/docs/before-you-begin#windows)
-- 생성한 Acess 키(.json 파일)를 환경변수로 설정
+   - `프로젝트 생성 > 서비스 계정 & Access 키(.json 파일) 발급` [참고 사이트](https://cloud.google.com/speech-to-text/docs/before-you-begin#windows)
+   - 생성한 Access 키(.json 파일)를 환경변수로 설정
 
-```
-GOOGLE_APPLICATION_CREDENTIALS="KEY_PATH"
-```
+     ```conf
+     GOOGLE_APPLICATION_CREDENTIALS="KEY_PATH"
+     ```
 
-- 라이브러리 설치
+   - 라이브러리 설치
 
-```
-pip3 install --upgrade google-cloud-speech
-pip3 uninstall grpcio
-pip3 uninstall grpcio-status
-pip3 install grpcio==1.44.0 --no-binary=grpcio
-pip3 install grpcio-tools==1.44.0 --no-binary=grpcio-tools
-```
+     ```sh
+     pip3 install --upgrade google-cloud-speech
+     pip3 uninstall grpcio
+     pip3 uninstall grpcio-status
+     pip3 install grpcio==1.44.0 --no-binary=grpcio
+     pip3 install grpcio-tools==1.44.0 --no-binary=grpcio-tools
+     ```
 
-- 테스트
+   - 테스트
 
-`hw/Voice-recogntion/Test_Code/google_stt_test.py`를 실행
+     `hw/Voice-recogntion/Test_Code/google_stt_test.py`를 실행
 
-```
-python3 google_stt_test.py
-```
+     ```sh
+     python3 google_stt_test.py
+     ```
 
-`Transcript: how old is the Brooklyn Bridge` 출력 시 정상
+     `Transcript: how old is the Brooklyn Bridge` 출력 시 정상
 
-### 자세인식 설정
+#### 자세인식 설정
 
 OpenCV와 Tensorflow를 이용하여 USB 카메라에 찍힌 사진을 통해 자세 인식
 
 1. OpenCV 설정
 
-- 라이브러리 설치
+   - 라이브러리 설치
 
-```
-pip3 install opencv-contrib-python==4.1.0.25
-```
+     ```sh
+     pip3 install opencv-contrib-python==4.1.0.25
+     ```
 
-- 테스트
+   - 테스트
 
-```
-python3 -c "import cv2; print(cv2.__version__)"
-```
+     ```sh
+     python3 -c "import cv2; print(cv2.__version__)"
+     ```
 
-에러 없을 시 정상
+     에러 없을 시 정상
 
 2. dlib 설정
 
-- 라이브러리 설치
+   - 라이브러리 설치
 
-```
-pip3 install dlib
-```
+     ```sh
+     pip3 install dlib
+     ```
 
-- 테스트
+   - 테스트
 
-```
-python3 -c "import dlib; print(dlib.__version__)"
-```
+     ```sh
+     python3 -c "import dlib; print(dlib.__version__)"
+     ```
 
-에러 없을 시 정상
+     에러 없을 시 정상
 
 3. cvlib 설정
 
-- 라이브러리 설치
+   - 라이브러리 설치
 
-```
-pip3 install cvlib
-pip3 install <https://github.com/lhelontra/tensorflow-on-arm/releases/download/v2.1.0/tensorflow-2.1.0-cp37-none-linux_armv7l.whl>
-```
+     ```sh
+     pip3 install cvlib
+     pip3 install <https://github.com/lhelontra/tensorflow-on-arm/releases/download/v2.1.0/tensorflow-2.1.0-cp37-none-linux_armv7l.whl>
+     ```
 
-- 테스트
+   - 테스트
 
-```
-python3 -c "import cvlib; print(cvlib.__version__)"
-```
+     ```sh
+     python3 -c "import cvlib; print(cvlib.__version__)"
+     ```
 
-에러 없을 시 정상
+     에러 없을 시 정상
 
+#### 스마트싱스 설정
 
-### 스마트싱스 설정
-* Install packages
+- Install packages
 
-* Build device library for smartThings
+- Build device library for smartThings
+
+  ```sh
+  cd ~/rpi-st-device
+  ./sdkbuildsetup
+  cd ~/st-device-sdk-c
+  make
+  ```
+
+- Register Device in Developer Workspace
+
+  1. Make device workspace
+  2. Make device Profile and Onboarding
+  3. Write Product info
+  4. Create raspberry pi device key
+  5. Enroll your device key into your SmartThings in workspace
+  6. download Onboarding.json and copy into raspberryPi directory
+  7. make qrcode for device
+
+- Build your device
+
+  ```sh
+  cd ~/st-device-sdk-c/example
+  rm example
+  make
+  ```
+
+- Setting Raspberry Pi for AP mode
+
+  - Check your Pi have AP mode
+    ```sh
+    iw phy0 info
     ```
+  - Check if you have with Wifi(2.4GHz) in your Area
+
+    - If there no Wifi(2.4GHz) you can't connect your device in your phone
+
+  - Install packages for SoftAP services
+
+    ```sh
+    sudo apt-get install hostapd
+    sudo apt-get install dnsmasq
+    ```
+
+  - Disable SoftAP service to prevent start without your purpose
+
+    ```sh
+    sudo systemctl unmask hostapd
+    sudo update-rc.d hostapd disable
+    sudo update-rc.d dnsmasq disable
+    ```
+
+  - Copy and change dhcpcd_ap code
+
+    ```sh
+    sudo cp /etc/dhcpcd.conf /etc/dhcpcd_ap.conf
+    ```
+
+    ```
+    # /etc/dhcpcd_ap.conf
+
+    interface wlan0
+    static ip_address = 192.168.2.1/24
+    nohook wpa_supplicant
+    ```
+
+  - Change hostapd.conf
+    check your channel with `iw wlan0 info`
+
+    ```conf
+    # /etc/hostapd/hostapd.conf
+
+    contry_code=KR
+    interface=wlan0
+    channel={channel}
+    ```
+
+  - Change code dnsmasq.conf
+
+    ```conf
+    # /etc/dnsmasq.conf
+
+    interface=wlan0
+    dhcp-range=192.168.2.2,192.168.2.10,255.255.255.0.12h
+    domain=wlan
+    address=/gw.wlan/192.168.2.1
+    ```
+
+  - Enable AP mode
+
+    ```sh
     cd ~/rpi-st-device
-    ./sdkbuildsetup
-    cd ~/st-device-sdk-c
-    make
+    sudo ./testhostapd
     ```
 
-* Register Device in Developer Workspace
-    1. Make device workspace
-    2. Make device Profile and Onboarding
-    3. Write Product info
-    4. Create raspberry pi device key 
-    5. Enroll your device key into your SmartThings in workspace
-    6. download Onboarding.json and copy into raspberryPi directory
-    7. make qrcode for device
+- Connect your device in your phone application
+  1. Use qrcode
+  2. Find devices that can be registered nearby
 
-* Build your device
-    ```
-    cd ~/st-device-sdk-c/example
-    rm example
-    make
-    ```
+#### 디스플레이 프론트엔드 설정
 
-* Setting Raspberry Pi for AP mode
-    * Check your Pi have AP mode
-        ```
-        iw phy0 info
-        ```
-    * Check if you have with Wifi(2.4GHz) in your Area
-        * If there no Wifi(2.4GHz) you can't connect your device in your phone
+- 프론트엔드 코드 빌드 및 실행
 
-    * Install packages for SoftAP services
-        ```
-        sudo apt-get install hostapd
-        sudo apt-get install dnsmasq
-        ```
-    
-    * Disable SoftAP service to prevent start without your purpose
-        ```
-        sudo systemctl unmask hostapd
-        sudo update-rc.d hostapd disable
-        sudo update-rc.d dnsmasq disable
-        ```
-
-    * Copy and change dhcpcd_ap code
-        ```
-        sudo cp /etc/dhcpcd.conf /etc/dhcpcd_ap.conf
-        sudo nano dhcpcd_ap.conf
-        ```
-
-        **setting**
-        interface **wlan0**
-            static ip_address = **192.168.2.1/24**
-            **nohook wpa_supplicant**
-
-    * Change hostapd.conf
-        ```
-        sudo nano /etc/hostapd/hostapd.conf
-        ```
-        **setting**
-        contry_code=**KR**
-        interface=**wlan0**
-        channel=**(check your channel with 'iw wlan0 info')**
-
-    * Change code dnsmasq.conf
-        ```
-        sudo nano /etc/dnsmasq.conf
-        ```
-        **setting**
-        interface=**wlan0**
-        dhcp-range=**192.168.2.2,192.168.2.10,255.255.255.0.12h**
-        domain=wlan
-        address=/gw.wlan/**192.168.2.1**
-
-    * Enable AP mode
-        ```
-        cd ~/rpi-st-device
-        sudo ./testhostapd
-        ```
-
-* Connect your device in your phone application
-    1. Use qrcode
-    2. Find devices that can be registered nearby
+  ```sh
+  cd front
+  npm install
+  npm run build
+  npx live-server build --port=3000 --no-browser --entry-file=build/index.html
+  ```
